--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -9,3 +9,5 @@
 @import "manual-adding/manual-adding";
 @import "auto-card/auto-card";
 @import "s-cars/s-cars";
+@import "e-cars/e-cars";
+@import "e-suppliers/e-suppliers";
