--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -21,3 +21,5 @@ mixin mixins()
     include ../../blocks/modules/manual-adding/manual-adding
     include ../../blocks/modules/auto-card/auto-card
     include ../../blocks/modules/s-cars/s-cars
+    include ../../blocks/modules/e-cars/e-cars
+    include ../../blocks/modules/e-suppliers/e-suppliers
