--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -144,4 +144,6 @@ block content
                 .title.title--36.pages-list__subtitle Личный кабинет сотрудника
                 .pages-list__links
                     a.pages-list__link.pages-list__link--check(href="employee.html" target="_blank") Сотрудник разводящая
+                    a.pages-list__link.pages-list__link--check(href="e-suppliers.html" target="_blank") База поставщиков
+                    a.pages-list__link.pages-list__link--work(href="e-cars.html" target="_blank") Каталог автомобилей
                     a.pages-list__link.pages-list__link--check(href="e-view-card.html" target="_blank") Просмотр карточки
