--- a/src/blocks/components/field/field.pug
+++ b/src/blocks/components/field/field.pug
@@ -84,7 +84,7 @@ mixin field(props = defaultFieldProps)
                 - else
                     span.field__placeholder!= checkProps.placeholder
                     - if(checkProps.icon.length > 0)
-                        .field__icon
+                        span.field__icon
                             svg
                                 use(xlink:href=`img/sprites/sprite.svg#${checkProps.icon}`)
                     span.field__error(data-js='fieldError')
