--- a/src/blocks/components/form-filter/form-filter.scss
+++ b/src/blocks/components/form-filter/form-filter.scss
@@ -2,8 +2,7 @@
     width: 100%;
     background-color: transparent;
 
-    &__content,
-    &__thanks {
+    &__content {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -17,15 +16,6 @@
         height: 100%;
         visibility: visible;
         overflow: visible;
-    }
-
-    &__thanks {
-        gap: 20px;
-        align-items: center;
-        text-align: center;
-        opacity: 0;
-        height: 0;
-        visibility: hidden;
     }
 
     &__title {
@@ -60,7 +50,7 @@
     &__fields {
         display: flex;
         flex-direction: column;
-        gap: 16px;
+        gap: 14px;
         margin-bottom: 16px;
         width: 100%;
         flex: 1 1 100%;
@@ -73,7 +63,7 @@
 
     &__flex {
         display: flex;
-        gap: 16px;
+        gap: 14px;
         width: 100%;
 
         >* {
