--- a/src/blocks/components/tooltip/tooltip.pug
+++ b/src/blocks/components/tooltip/tooltip.pug
@@ -1,7 +1,7 @@
 -
     const defaultTooltipProps = {
         classes: '',
-        title: 'Честная цена',
+        title: '',
         text: 'Краткое описание, что такое честная цена',
         icon: 'tooltip'
     }
@@ -17,7 +17,8 @@ mixin tooltip(props= defaultTooltipProps)
 
     .tooltip(class= checkProps.classes)&attributes(attributes)
         .tooltip__header
-            .tooltip__title!= checkProps.title
+            - if(checkProps.title.length > 0)
+                .tooltip__title!= checkProps.title
             .tooltip__icon
                 svg
                     use(xlink:href=`img/sprites/sprite.svg#${checkProps.icon}`)
