--- a/src/blocks/components/tooltip/tooltip.scss
+++ b/src/blocks/components/tooltip/tooltip.scss
@@ -56,11 +56,20 @@
         top: calc(100% + 0px);
         visibility: hidden;
         opacity: 0;
+        backdrop-filter: blur(20px);
     }
 
     &:hover &__tooltip {
         top: calc(100% + 8px);
         visibility: visible;
         opacity: 1;
+    }
+}
+
+.tooltip {
+    &--small &__header {
+        padding: 0;
+        color: $c-accent;
+        background-color: transparent;
     }
 }
