--- a/src/blocks/modules/e-suppliers/e-suppliers.scss
+++ b/src/blocks/modules/e-suppliers/e-suppliers.scss
@@ -1,22 +1,46 @@
-.s-cars {
+.e-suppliers {
+    &__controls {
+        margin-top: 20px;
+    }
 
-    &__header {
-        display: flex;
-        justify-content: space-between;
-        gap: 32px;
+    &__search {
+        width: 50%;
+        padding-right: 7px;
 
-        @include max(mobile) {
-            gap: 16px;
-            flex-direction: column;
+        @include max(tablet) {
+            padding-right: 0;
+            width: 100%;
         }
     }
 
-    &__title {
-        margin-top: 6px;
+    &__filter {
+        margin-top: 14px;
+
+        .form-filter__content {
+            display: grid;
+            grid-template-columns: repeat(4, minmax(0, 1fr));
+            gap: 14px;
+
+            @include max(laptop) {
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+            }
+
+            @include max(mobile) {
+                grid-template-columns: minmax(0, 1fr);
+            }
+        }
+
+        .form-filter__fields {
+            grid-column: 1 / 4;
+            margin-bottom: 0;
+            display: grid;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+            display: contents;
+        }
     }
 
     &__list {
-        margin-top: 26px;
+        margin-top: 32px;
         display: flex;
         flex-direction: column;
 
@@ -30,114 +54,32 @@
     }
 }
 
-.s-car {
+.e-supplier {
     display: flex;
     align-items: flex-start;
-    gap: 24px;
+    gap: 20px;
     background-color: $c-white;
     padding: 24px 0;
 
-    @include max(laptop-small) {
-        gap: 16px;
-    }
-
-    @include max(mobile) {
-        flex-direction: column;
-    }
-
-    &__img {
-        position: relative;
-        flex: 0 0 8%;
-        aspect-ratio: 1 / 0.75;
-        border-radius: 16px;
-        overflow: hidden;
-
-        @include max(laptop) {
-            flex: 0 0 112px;
-        }
-
-        @include max(mobile) {
-            flex-basis: auto;
-            width: 100%;
-        }
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    @include max(tablet) {
+        flex-wrap: wrap;
+        gap: 24px;
     }
 
     &__info {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 8px;
-        flex: 1 1 100%;
-        margin-right: 12px;
+        gap: 2px;
+        flex: 0 0 17%;
+        min-width: 200px;
+
+        @include max(tablet) {
+            flex-basis: 50%;
+        }
 
         @include max(mobile) {
-            display: contents;
-        }
-    }
-
-    &__bottom {
-        display: flex;
-        align-items: flex-start;
-        gap: 32px;
-
-        @include max(laptop) {
-            flex-wrap: wrap;
-            gap: 16px 24px;
-        }
-    }
-
-    &__price {
-        min-width: 130px;
-        flex-shrink: 0;
-
-        .current {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 150%;
-            letter-spacing: 0;
-            color: $c-text;
-
-            svg {
-                width: 9px;
-                height: 12px;
-                opacity: 0;
-            }
-        }
-
-        .old {
-            font-weight: 500;
-            font-size: 12px;
-            line-height: 150%;
-            letter-spacing: 0;
-            color: #6B7280;
-            text-decoration: line-through;
-        }
-    }
-
-    &__price--up {
-        .current {
-            color: $c-status-red;
-
-            svg {
-                opacity: 1;
-                transform: rotate(180deg);
-            }
-        }
-    }
-
-    &__price--down {
-        .current {
-            color: $c-status-green;
-
-            svg {
-                opacity: 1;
-            }
+            flex-basis: 100%;
         }
     }
 
@@ -147,81 +89,51 @@
         font-size: 16px;
         line-height: 150%;
         letter-spacing: 0;
-
-        @include max(mobile) {
-            order: -1;
-        }
     }
 
-    &__status {
-        position: relative;
-        padding-left: 19px;
+    &__inn {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0;
+    }
+
+    &__phone {
         font-weight: 500;
         font-size: 14px;
         line-height: 150%;
-        letter-spacing: 0;
-        color: $c-text;
-        flex-shrink: 0;
+        letter-spacing: 0%;
+        color: #6B7280;
+        transition: all $tr-time linear;
 
-        &::after {
-            position: absolute;
-            content: '';
-            width: 12px;
-            height: 12px;
-            border-radius: 100%;
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%);
+        &:hover {
+            color: $c-accent;
         }
     }
 
-    &__status--red:after {
-        background-color: $c-status-red;
-    }
-
-    &__status--green:after {
-        background-color: $c-status-green;
-    }
-
-    &__status--blue:after {
-        background-color: $c-status-blue;
-    }
-
-    &__status--yellow:after {
-        background-color: $c-status-yellow;
-    }
-
-    &__right {
+    &__block {
+        flex: 0 1 324px;
         display: flex;
-        align-items: flex-start;
-        gap: 24px;
-        flex: 0 0 auto;
-
-        @include max(laptop-small) {
-            gap: 16px;
-        }
+        flex-direction: column;
+        gap: 8px;
 
         @include max(tablet) {
-            flex-direction: column;
-            align-items: stretch;
-            gap: 8px;
-
-            .btn {
-                width: 100%;
-            }
+            order: 2;
+            flex: 0 0 auto;
         }
 
         @include max(mobile) {
-            width: 100%;
+            order: 0;
         }
     }
 
-    &__detail {
-        margin-right: 32px;
-
-        @include max(laptop) {
-            margin-right: 0;
-        }
+    &__flex {
+        display: flex;
+        align-items: center;
+        gap: 10px;
     }
 
     &__btns {
@@ -244,5 +156,70 @@
         }
     }
 
+}
 
+.info-row {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+
+    &__title {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 150%;
+        letter-spacing: 0;
+        color: #6B7280;
+    }
+
+    &__value {
+        display: flex;
+        align-items: center;
+        gap: 7px;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 150%;
+        letter-spacing: 0;
+    }
+
+    &__number {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 150%;
+        letter-spacing: 0;
+        color: $c-text;
+        flex-shrink: 0;
+        min-height: 18px;
+    }
+
+    &__number--red {
+        background-color: $c-status-red;
+        color: $c-white;
+        padding: 0 8px;
+        border-radius: 8px;
+    }
+
+    &__number--green {
+        background-color: $c-status-green;
+        color: $c-white;
+        padding: 0 8px;
+        border-radius: 8px;
+    }
+
+    &__number--blue {
+        background-color: $c-status-blue;
+        color: $c-white;
+        padding: 0 8px;
+        border-radius: 8px;
+    }
+
+    &__number--yellow {
+        background-color: $c-status-yellow;
+        color: $c-white;
+        padding: 0 8px;
+        border-radius: 8px;
+    }
 }
