catalog in progress

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -9,7 +9,7 @@
 @import "chat/chat";
 @import "slider-controls/slider-controls";
 @import "tooltip/tooltip";
-//@import "pagination/pagination";
+@import "pagination/pagination";
 //@import "quote/quote";
 //@import "video/video";
 //@import "cookie/cookie";
