--- a/src/blocks/components/btn/btn.scss
+++ b/src/blocks/components/btn/btn.scss
@@ -266,7 +266,7 @@
         }
     }
 
-    /*&--toggle {
+    &--toggle {
         .show {
             display: block;
         }
@@ -284,7 +284,7 @@
         .hide {
             display: block;
         }
-    }*/
+    }
 
     &--fake {
         pointer-events: none;
