--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -10,6 +10,7 @@ mixin mixins()
     include ../../blocks/components/slider-controls/slider-controls
     include ../../blocks/components/chat/chat
     include ../../blocks/components/tooltip/tooltip
+    include ../../blocks/components/pagination/pagination
 
     //- Модули
     include ../../blocks/modules/header/header
