--- a/src/blocks/modules/e-cars/e-cars.scss
+++ b/src/blocks/modules/e-cars/e-cars.scss
@@ -15,6 +15,33 @@
         margin-top: 6px;
     }
 
+    &__filter {
+        margin-top: 20px;
+    }
+
+    &__sorts {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        gap: 32px;
+        margin-top: 32px;
+        padding: 32px 0;
+        border-top: 1px solid #E4E4E7;
+
+        .btn {
+            flex: 0 0 auto;
+        }
+    }
+
+    &__sort {
+        .form-filter__content {
+            flex-direction: row;
+            width: fit-content;
+            gap: 14px;
+            flex: 0 1 auto;
+        }
+    }
+
     &__list {
         margin-top: 26px;
         display: flex;
@@ -27,6 +54,10 @@
 
     &__card+&__card {
         border-top: 1px solid #E4E4E7;
+    }
+
+    &__block {
+        padding-bottom: 64px;
     }
 }
 
@@ -73,8 +104,14 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 8px;
-        flex: 1 1 100%;
-        margin-right: 12px;
+        flex: 1 1 auto;
+        margin-right: 21px;
+        max-width: 525px;
+
+        @include max(laptop) {
+            margin-right: 0;
+            max-width: 400px;
+        }
 
         @include max(mobile) {
             display: contents;
@@ -84,7 +121,7 @@
     &__bottom {
         display: flex;
         align-items: flex-start;
-        gap: 32px;
+        gap: 20px;
 
         @include max(laptop) {
             flex-wrap: wrap;
@@ -92,11 +129,27 @@
         }
     }
 
+    &__block {
+        flex: 0 1 auto;
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+    }
+
+    &__flex {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+    }
+
     &__price {
-        min-width: 130px;
+        min-width: 180px;
         flex-shrink: 0;
 
         .current {
+            display: flex;
+            align-items: center;
+            gap: 5px;
             font-weight: 500;
             font-size: 16px;
             line-height: 150%;
@@ -107,6 +160,15 @@
                 width: 9px;
                 height: 12px;
                 opacity: 0;
+                flex-shrink: 0;
+            }
+
+            .tooltip__icon svg {
+                width: 16px;
+                height: 16px;
+                flex-shrink: 0;
+                transform: none;
+                opacity: 1;
             }
         }
 
@@ -153,41 +215,34 @@
         }
     }
 
-    &__status {
-        position: relative;
-        padding-left: 19px;
+    &__sticker {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: max-content;
+        padding: 3px 8px;
+        border-radius: 8px;
         font-weight: 500;
-        font-size: 14px;
+        font-size: 12px;
         line-height: 150%;
         letter-spacing: 0;
-        color: $c-text;
+        color: $c-white;
         flex-shrink: 0;
-
-        &::after {
-            position: absolute;
-            content: '';
-            width: 12px;
-            height: 12px;
-            border-radius: 100%;
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%);
-        }
     }
 
-    &__status--red:after {
+    &__sticker--red {
         background-color: $c-status-red;
     }
 
-    &__status--green:after {
+    &__sticker--green {
         background-color: $c-status-green;
     }
 
-    &__status--blue:after {
+    &__sticker--blue {
         background-color: $c-status-blue;
     }
 
-    &__status--yellow:after {
+    &__sticker--yellow {
         background-color: $c-status-yellow;
     }
 
@@ -196,12 +251,9 @@
         align-items: flex-start;
         gap: 24px;
         flex: 0 0 auto;
+        margin-left: auto;
 
         @include max(laptop-small) {
-            gap: 16px;
-        }
-
-        @include max(tablet) {
             flex-direction: column;
             align-items: stretch;
             gap: 8px;
@@ -217,7 +269,7 @@
     }
 
     &__detail {
-        margin-right: 32px;
+        margin-right: 8px;
 
         @include max(laptop) {
             margin-right: 0;
@@ -243,6 +295,166 @@
             width: 100%;
         }
     }
+}
 
+.catalog-filter {
+    @include max(mobile) {
+        position: fixed;
+        width: 100%;
+        max-width: 450px;
+        top: 0;
+        right: -100%;
+        z-index: 10;
+        border-radius: 0;
+        transition: right $tr-time-long linear;
+        height: 100dvh;
+        height: 100vh;
+        padding-top: 76px;
 
+        &.active {
+            right: 0;
+        }
+    }
+
+    &__overlay {
+        display: none;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $c-black;
+        opacity: 0;
+        visibility: hidden;
+        transition: all $tr-time-long linear;
+
+        @include max(mobile) {
+            display: block;
+        }
+    }
+
+    &.active &__overlay {
+        visibility: visible;
+        opacity: 0.5;
+    }
+
+    &__close {
+        display: none;
+        align-items: center;
+        justify-content: center;
+        width: fit-content;
+        margin-bottom: 16px;
+        margin-left: auto;
+
+        svg {
+            width: 32px;
+            height: 32px;
+            color: $c-text;
+        }
+
+        @include max(mobile) {
+            display: flex;
+        }
+    }
+}
+
+.spoiler-form {
+    @include max(mobile) {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__fields {
+        display: flex;
+        flex-direction: column;
+        gap: 14px;
+        transition: max-height $tr-time-long linear;
+
+        @include max(laptop) {
+            gap: 14px;
+        }
+
+        @include max(mobile) {
+            overflow: auto;
+            margin-bottom: 24px;
+            height: auto;
+            margin-right: -10px;
+            padding-right: 10px;
+        }
+    }
+
+    &__fields[data-js="formSpoilerContent"] {
+        max-height: 130px;
+        overflow: hidden;
+
+        @include max(laptop-small) {
+            max-height: 274px;
+        }
+
+        @include max(mobile) {
+            overflow-y: auto;
+        }
+    }
+
+    &__row {
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        gap: 14px;
+
+        @include max(laptop-small) {
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+        }
+
+        &--4 {
+            grid-template-columns: repeat(4, minmax(0, 1fr));
+
+            @include max(laptop-small) {
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+            }
+        }
+
+        &--5 {
+            grid-template-columns: repeat(5, minmax(0, 1fr));
+
+            @include max(laptop-small) {
+                grid-template-columns: repeat(3, minmax(0, 1fr));
+
+                .field:last-child {
+                    grid-column: 2 / 4;
+                }
+            }
+        }
+
+    }
+
+    &__btns {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 10px;
+        margin-top: 20px;
+
+        @include max(laptop) {
+            margin-top: 10px;
+        }
+
+        @include max(mobile) {
+            margin-top: auto;
+        }
+
+        .btn {
+            @include max(mobile) {
+                width: 100%;
+            }
+        }
+    }
+
+    &__toggle {
+        margin-right: auto;
+
+        @include max(mobile) {
+            display: none;
+        }
+    }
 }
