--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -145,5 +145,6 @@ block content
                 .pages-list__links
                     a.pages-list__link.pages-list__link--check(href="employee.html" target="_blank") Сотрудник разводящая
                     a.pages-list__link.pages-list__link--check(href="e-suppliers.html" target="_blank") База поставщиков
-                    a.pages-list__link.pages-list__link--work(href="e-cars.html" target="_blank") Каталог автомобилей
+                    a.pages-list__link.pages-list__link--check(href="e-cars.html" target="_blank") Каталог автомобилей
+                    a.pages-list__link.pages-list__link--work(href="e-cars-supplier.html" target="_blank") Каталог автомобилей поставщика
                     a.pages-list__link.pages-list__link--check(href="e-view-card.html" target="_blank") Просмотр карточки
