--- a/src/blocks/modules/e-cars/e-cars.scss
+++ b/src/blocks/modules/e-cars/e-cars.scss
@@ -17,9 +17,38 @@
 
     &__filter {
         margin-top: 20px;
+
+        @include max(mobile) {
+            background-color: $c-white;
+            margin-top: 0;
+        }
+    }
+
+    &__filter-btn {
+        position: absolute;
+        right: 0;
+        bottom: 20px;
+        padding: 13px;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        background-color: $c-accent;
+        color: $c-white;
+        border-radius: 8px;
+        transition: all $tr-time linear;
+
+        @include max(mobile) {
+            display: flex;
+        }
+
+        svg {
+            width: 22px;
+            height: 22px;
+        }
     }
 
     &__sorts {
+        position: relative;
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
@@ -27,6 +56,18 @@
         margin-top: 32px;
         padding: 32px 0;
         border-top: 1px solid #E4E4E7;
+
+        @include max(tablet) {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 20px;
+            margin-top: 20px;
+            padding: 20px 0;
+        }
+
+        @include max(mobile) {
+            gap: 8px;
+        }
 
         .btn {
             flex: 0 0 auto;
@@ -39,6 +80,13 @@
             width: fit-content;
             gap: 14px;
             flex: 0 1 auto;
+
+            @include max(mobile) {
+                flex-direction: column;
+                align-items: stretch;
+                gap: 8px;
+                width: 100%;
+            }
         }
     }
 
@@ -47,8 +95,8 @@
         display: flex;
         flex-direction: column;
 
-        @include max(mobile) {
-            margin-top: 12px;
+        @include max(tablet) {
+            margin-top: 0;
         }
     }
 
@@ -70,6 +118,10 @@
 
     @include max(laptop-small) {
         gap: 16px;
+    }
+
+    @include max(tablet) {
+        flex-wrap: wrap;
     }
 
     @include max(mobile) {
@@ -111,6 +163,11 @@
         @include max(laptop) {
             margin-right: 0;
             max-width: 400px;
+        }
+
+        @include max(tablet) {
+            flex-basis: 100%;
+            max-width: 100%;
         }
 
         @include max(mobile) {
@@ -263,8 +320,16 @@
             }
         }
 
+        @include max(tablet) {
+            flex-direction: row;
+            align-items: flex-start;
+            align-self: flex-end;
+        }
+
         @include max(mobile) {
             width: 100%;
+            flex-direction: column;
+            align-items: stretch;
         }
     }
 
@@ -291,8 +356,15 @@
             }
         }
 
+        @include max(tablet) {
+            flex-direction: row;
+            align-items: flex-start;
+        }
+
         @include max(mobile) {
             width: 100%;
+            flex-direction: column;
+            align-items: stretch;
         }
     }
 }
@@ -309,7 +381,7 @@
         transition: right $tr-time-long linear;
         height: 100dvh;
         height: 100vh;
-        padding-top: 76px;
+        padding: 66px 10px 20px;
 
         &.active {
             right: 0;
@@ -347,8 +419,8 @@
         margin-left: auto;
 
         svg {
-            width: 32px;
-            height: 32px;
+            width: 24px;
+            height: 24px;
             color: $c-text;
         }
 
@@ -406,11 +478,19 @@
             grid-template-columns: repeat(2, minmax(0, 1fr));
         }
 
+        @include max(mobile) {
+            grid-template-columns: minmax(0, 1fr);
+        }
+
         &--4 {
             grid-template-columns: repeat(4, minmax(0, 1fr));
 
             @include max(laptop-small) {
                 grid-template-columns: repeat(2, minmax(0, 1fr));
+            }
+
+            @include max(mobile) {
+                grid-template-columns: minmax(0, 1fr);
             }
         }
 
@@ -422,6 +502,14 @@
 
                 .field:last-child {
                     grid-column: 2 / 4;
+                }
+            }
+
+            @include max(mobile) {
+                grid-template-columns: minmax(0, 1fr);
+
+                .field:last-child {
+                    grid-column: 1 / 2;
                 }
             }
         }
