app reg page complete

--- a/src/blocks/modules/e-suppliers/e-suppliers.scss
+++ b/src/blocks/modules/e-suppliers/e-suppliers.scss
@@ -3,6 +3,10 @@
         margin-top: 20px;
     }
 
+    &__block {
+        overflow: visible;
+    }
+
     &__search {
         width: 50%;
         padding-right: 7px;
