--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -144,6 +144,7 @@ block content
                 .title.title--36.pages-list__subtitle Личный кабинет сотрудника
                 .pages-list__links
                     a.pages-list__link.pages-list__link--check(href="employee.html" target="_blank") Сотрудник разводящая
+                    a.pages-list__link.pages-list__link--check(href="e-app-reg.html" target="_blank") Заявки на регистрацию аккаунта
                     a.pages-list__link.pages-list__link--check(href="e-suppliers.html" target="_blank") База поставщиков
                     a.pages-list__link.pages-list__link--check(href="e-cars.html" target="_blank") Каталог автомобилей
                     a.pages-list__link.pages-list__link--work(href="e-cars-supplier.html" target="_blank") Каталог автомобилей поставщика
