--- a/src/blocks/components/tooltip/tooltip.scss
+++ b/src/blocks/components/tooltip/tooltip.scss
@@ -18,11 +18,19 @@
 
         &::after {
             content: '';
-            left: 0;
-            width: 100%;
-            height: 8px;
             position: absolute;
-            top: 100%;
+            left: 100%;
+            top: 0;
+            height: 100%;
+            width: 8px;
+
+            @include max(mobile) {
+                left: 0;
+                width: 100%;
+                height: 8px;
+                top: 100%;
+            }
+
         }
     }
 
@@ -38,31 +46,72 @@
         }
     }
 
-
     &__tooltip {
-        padding: 10px;
-        border-radius: 16px;
+        padding: 12px 16px;
+        border-radius: 8px;
         position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: rgba(16, 16, 16, 0.7);
-        font-weight: 400;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: $c-white;
+        font-weight: 500;
         font-size: 14px;
         line-height: 120%;
-        color: $c-white;
+        color: $c-text;
         width: max-content;
-        max-width: 250px;
+        max-width: 440px;
+        border: 1px solid #E0E0E0;
+        box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.05), 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
         transition: all $tr-time linear;
-        top: calc(100% + 0px);
+        left: calc(100% + 0px);
         visibility: hidden;
         opacity: 0;
-        backdrop-filter: blur(20px);
+        z-index: 1;
+
+        @include max(mobile) {
+            max-width: 310px;
+            left: 50%;
+            transform: translateX(-50%);
+            top: calc(100% + 0px);
+            padding: 6px 8px;
+            font-size: 12px;
+        }
     }
 
     &:hover &__tooltip {
-        top: calc(100% + 8px);
+        left: calc(100% + 7px);
+        top: 50%;
         visibility: visible;
         opacity: 1;
+
+        @include max(mobile) {
+            top: calc(100% + 7px);
+            left: 50%;
+        }
+    }
+}
+
+.tooltip-table {
+    display: flex;
+    flex-direction: column;
+
+    &__row {
+        display: flex;
+        align-items: center;
+        padding: 8px 6px;
+        gap: 8px;
+
+        @include max(mobile) {
+            padding: 4px 0px;
+        }
+    }
+
+    &__param {
+        color: #6B7280;
+        flex: 0 0 180px;
+
+        @include max(mobile) {
+            flex: 0 0 50%;
+        }
     }
 }
 
