--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -9,5 +9,6 @@
 @import "manual-adding/manual-adding";
 @import "auto-card/auto-card";
 @import "s-cars/s-cars";
-@import "e-cars/e-cars";
+@import "e-app-reg/e-app-reg";
 @import "e-suppliers/e-suppliers";
+@import "e-cars/e-cars";
